fix: user authentication fields
